--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "twitter",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
@@ -10,8 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4",
-    "morgan": "^1.9.1",
-    "pug": "^2.0.3"
-  }
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.6",
+    "pug": "^2.0.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dymafr/node-chapitre10-projet1-end.git"
+  },
+  "bugs": {
+    "url": "https://github.com/dymafr/node-chapitre10-projet1-end/issues"
+  },
+  "homepage": "https://github.com/dymafr/node-chapitre10-projet1-end#readme",
+  "description": ""
 }
